# BootMod

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  bootmod.cpp  bootmod.h  build.sh
docs/: CHANGELOG.md  ROADMAP.md  TODO.md
gui/: CMakeLists.txt
gui/bitmapeditor/: CMakeLists.txt  exportproject.cpp  exportproject.h  importimage.cpp  importimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newproject.cpp  newproject.h  openproject.cpp  openproject.h  projectfromimage.cpp  projectfromimage.h  projectwizard.cpp  projectwizard.h
gui/bitmapeditor/base/: bitmapappcontext.cpp  bitmapappcontext.h  bitmaplayermanager.cpp  bitmaplayermanager.h  workspace.cpp
gui/qml/: AboutDialog.qml  DevicePreviewDialog.qml  Main.qml
gui/src/: appcontext.cpp  appcontext.h  bitmapeditorwrapper.cpp  bitmapeditorwrapper.h  bitmapeditorwrapper_new.cpp  bitmapeditorwrapper_new.h  bitmapeditorwrapper_old.cpp  bitmapeditorwrapper_old.h  commandmanager.cpp  commandmanager.h  logofile.cpp  logofile.h  logolayer.cpp  logolayer.h  logolistmodel.cpp  logolistmodel.h  main.cpp  thumbnailprovider.cpp  thumbnailprovider.h
include/: bootmod.h  splash.h  version.h
src/: bootmod.cpp  bootmod_png.cpp  main.cpp  splash.cpp
